--- a/KotlinApp/app/build.gradle
+++ b/KotlinApp/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     implementation "android.arch.navigation:navigation-ui:1.0.0-alpha05"
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha05"
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-alpha05"
+    implementation 'com.google.android.material:material:1.0.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
